--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Crie seu evento</title>
+    <title>Criando seu evento</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;600;700&family=Poppins&display=swap" rel="stylesheet">
     
